feat(header, footer) - Accès pour les RH au dashboard d'administration

--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,9 +1,11 @@
 <footer>
     <nav id="footer-nav">
         <div id="footer-nav-links">
+            {% if is_granted('ROLE_RH') %}
             <a href={{ path('app_admin') }}>
                 <i class="fa-solid fa-toolbox"></i>
             </a>
+            {% endif %}
             <a href={{ path('app_formations') }}>
                 <i class="fa-solid fa-chalkboard-user"></i>
             </a>
