feat(home) - Information concernant le nombre de places maximum disponibles pour une formation

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -9,7 +9,7 @@
     <h2>Formations disponibles</h2>
     {% for formation in formationsDisponibles %}
         <div class="home-formation-container">
-            <h3>{{ formation.titre }}</h3>
+            <h3>{{ formation.titre }} - {{ formation.getNbParticipantsMaxTotaux() }} places</h3>
             <div class="truncate">
                 {{ formation.description|raw }}
             </div>
