--- a/templates/admin/admin_dashboard.html.twig
+++ b/templates/admin/admin_dashboard.html.twig
@@ -26,8 +26,9 @@
     </div>
     <p>Cette section est consacrée à la gestion des formations et de leurs sessions.</p>
     <div class="admin-settings-buttons responsiv settings-btn"> 
-        <a href={{ path('app_admin_formation_index') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les formations </button> </a>
-        <a href={{ path('app_admin_session_index') }}> <button class="btn responsiv admin-btn utility-button"> Gérer les sessions de formations </button> </a>
+        <a href={{ path('app_admin_formation_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les formations</button> </a>
+        <a href={{ path('app_admin_session_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les sessions de formations</button> </a>
+        <a href={{ path('app_admin_participation_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les participations</button> </a>
     </div>
 </div>
 {% if is_granted('ROLE_ADMIN') %}
