feat(visibilite) - Renommage de l'entité SessionService en Visibilité, pour une meilleure UX et mieux comprendre l'intérêt de cette entité

--- a/templates/admin/admin_dashboard.html.twig
+++ b/templates/admin/admin_dashboard.html.twig
@@ -29,6 +29,7 @@
         <a href={{ path('app_admin_formation_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les formations</button> </a>
         <a href={{ path('app_admin_session_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les sessions de formations</button> </a>
         <a href={{ path('app_admin_participation_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les participations</button> </a>
+        <a href={{ path('app_admin_visibilite_index') }}> <button class="btn responsiv admin-btn utility-button">Gérer les visibilités</button> </a>
     </div>
 </div>
 {% if is_granted('ROLE_ADMIN') %}
