feat(account) - Lien pour envoyer un mail à la Direction Ville Connecté (Service Informaique)

--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -56,8 +56,8 @@
             <h2 class="h2 settings-title">Support</h2>
             <div class="line"></div>
         </div>
-        <p>Cette section est consacrée au contact du support de l’application. A travers des tickets, vous pouvez faire remonter des bugs, proposer des pistes d’améliorations ou des idées de formations...</p>
-        <a class="btn settings-btn utility-button">Envoyer un Ticket</a>
+        <p>Cette section est consacrée au contact du support de l’application. Vous pouvez faire remonter des bugs, proposer des pistes d’améliorations ou des idées de formations...</p>
+        <a href="mailto:dvc@mairie-villefontaine.fr" class="btn settings-btn utility-button">Envoyer un mail</a>
 </div>
 
 {% endblock %}
